--- a/Tarea1/Makefile
+++ b/Tarea1/Makefile
@@ -23,4 +23,19 @@ $(TARGET): $(OBJECTS)
 .PHONY: clean	
 
 clean:
-	del $(TARGET) $(OBJECTS)
+	del $(TARGET) $(OBJECTS).PHONY: clean all
+
+SRCS := 
+EXES := 
+CFLAGS := -Wall -Werror
+
+all: 
+
+%.x: %.c
+	 $^  -o 
+	mv  
+
+.PHONY: all clean
+
+clean:
+	  *~
